--- a/emails/welcome/welcome.html
+++ b/emails/welcome/welcome.html
@@ -3,69 +3,38 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Have a look at your Weekly Report</title>
-    <!--[if !mso]>
-    <!--<![endif]-->
     <style type="text/css">
-      .product-image {
-          display:block !important;
-          width: 100% !important;
-          max-width: 180px ! important;
-          height:auto !important;
+
+      .container {
+        width: 100%;
+        max-width: 600px;
       }
-      .article-image {
-          width: 100% !important;
-          max-width: 265px !important;
+      .footer {
+        width: 100% !important;
       }
-      .margin-left {
-          margin-left: 5px !important;
+      .img-style {
+        width: 600px;
       }
-      .article-right {
-          margin-right: 5px !important;
+      .bg-png {
+        position: absolute;
+        left: -10%;
+        width: 120%;
+        top: -400px;
       }
-      .block-product {
-          width: 100% !important;
-      }
-      .banner {
-          width: 50% !important;
-      }
-      .block-2-columns {
-          width: 270px !important;
-      }
-      .block-3-columns {
-          width: 180px !important;
+      @media only screen and (max-width: 800px){
+        .bg-png {
+          position: absolute;
+          left: -10%;
+          width: 120%;
+          top: -50px;
+        }
       }
       @media only screen and (max-width: 600px){
       .container {
           display:block !important;
           width: 100% !important;
+          max-width: 480px !important;
           height:auto !important;
-      }
-      .block-product {
-          width: 50% !important;
-      }
-      .block-picto-img {
-          width: 30% !important;
-      }
-      .block-picto-txt {
-          width: 70% !important;
-      }
-      .block-2-columns {
-          width: 100% !important;
-      }
-      .block-3-columns {
-          width: 100% !important;
-      }
-      .article-image {
-          width: 100% !important;
-          max-width: 100% !important;
-      }
-      .feature-image {
-          width: 100% !important;
-          max-width: 100% !important;
-      }
-      .phone-image {
-          width: 50% !important;
-          max-width: 50% !important;
       }
       .mobile-no-padding {
           padding-top: 0px !important;
@@ -77,17 +46,17 @@
           border-radius: 0px !important;
           box-shadow: 0px 0px 0px transparent !important;
       }
-      .mobile-full-width {
-          width: 100% !important;
-          min-width: 100% !important;
-          max-width: 100% !important;
+      .img-style {
+        width: 420px;
       }
-      .mobile-column-horizontal-c {
-          padding-top: 10px !important;
-      }
-      .bg-svg {
 
+      .bg-png {
+        position: absolute;
+        left: -40%;
+        width: 80%;
+        top: -400px;
       }
+
       img {
           outline:none;
           text-decoration:none;
@@ -107,11 +76,20 @@
           width: 100% !important;
       }
       }
-      @media only screen and (max-width: 370px){
-      .block-product {
-          width: 100% !important;
-          min-width: 100% !important;
-      }
+      @media only screen and (max-width: 480px){
+        .container {
+            display:block !important;
+            width: 100% !important;
+            max-width: 420px !important;
+            height:auto !important;
+        }
+        .footer {
+          width: 100%;
+        }
+
+        .img-style {
+          width: 320px;
+        }
       }
     </style>
   </head>
@@ -122,34 +100,14 @@
     bgcolor="#F2F2F7">
       <tr>
         <td>
-          <td style="position: absolute; width: 100%;">
-            <svg
-              style="left: -80%; top: -400px; position: absolute; width: 160%;"
-              class="bg-svg"
-              width="1333px"
-              height="916px"
-              viewBox="0 0 1333 916"
-              version="1.1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink">
-                <g id="00-–-Brand-Elements"
-                  stroke="none"
-                  stroke-width="1"
-                  fill="none"
-                  fill-rule="evenodd">
-                    <g id="Desktop-HD-Copy-6"
-                      transform="translate(-84.000000, -75.000000)"
-                      fill="#6079F2">
-                        <path d="M1159.1964,990.428091 L305.465924,895.589241 C261.079806,890.645035 224.840506,857.861582 215.48571,814.206495 L86.0917465,210.283031 C73.8996101,153.480852 116.515903,99.6564335 174.611152,98.4484742 L1322.58226,75.0196823 C1382.16641,73.811723 1427.31103,128.394628 1414.95034,186.657595 L1259.87985,917.725797 C1249.99129,964.218184 1206.47604,995.68131 1159.1964,990.428091" id="Fill-1"></path>
-                    </g>
-                </g>
-            </svg>
+          <td class="bg-png">
+            <img class="bg-png" src="./bg.png" />
           </td>
           <div style="max-height:0; width:0; overflow:hidden; float:left; display:none;"></div>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#F2F2F7">
             <tr>
               <td class="mobile-no-padding" style="padding-top: 100px; padding-right: 20px; padding-left: 20px;">
-                <table class="container" style="position: relative; z-index: 2;" align="center" width="600" border="0" cellspacing="0"
+                <table class="container" style="position: relative; z-index: 2;" align="center" border="0" cellspacing="0"
                 cellpadding="0">
                   <tr>
                     <td class="mobile-no-radius" style="background-color:#ffffff; border-radius: 8px; box-shadow: 0px 4px 8px rgba(90,88,94,.3);">
@@ -157,14 +115,14 @@
                       <table width="100%" border="0" cellpadding="0" cellspacing="0" align="center">
                         <tr>
                           <td style="padding-top: 30px; padding-bottom: 20px; padding-right: 30px; padding-left: 30px;">
-                            <table width="100%" border="0" cellpadding="0" cellspacing="0" style="max-width: 540px;">
+                            <table width="100%" border="0" cellpadding="0" cellspacing="0">
                               <tr>
                                 <td>
-                                  <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                                  <table border="0" cellpadding="0" cellspacing="0">
                                     <tr>
                                       <td align="left" height="20" width="50%">
                                         <a href="http://tinymerch.com">
-                                          <img src="https://static.tinymerch.com/emails/welcome/logomark-white.png"
+                                          <img src="./logomark-white.png"
                                           border="0" alt="" title="TinyMerch Logo" width="80" height="auto" style="display: block; position: absolute; top: -40px;">
                                         </a>
                                       </td>
@@ -181,12 +139,12 @@
                       <table width="100%" border="0" cellpadding="0" cellspacing="0" align="center">
                         <tr>
                           <td style="padding-bottom: 30px; padding-right: 30px; padding-left: 30px;">
-                            <table width="100%" border="0" cellpadding="0" cellspacing="0" style="max-width: 480px;">
+                            <table width="100%" border="0" cellpadding="0" cellspacing="0">
                               <tr>
-                                <td style="padding-top: 10px; color: #5A585E; font-weight: 200; text-decoration:none; font-size:22px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, sans-serif; line-height:28px">👋 Kevin,</td>
+                                <td style="padding-top: 10px; color: #5A585E; font-weight: 200; text-decoration:none; font-size:22px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, sans-serif; line-height:28px">👋 Hello there,</td>
                               </tr>
                               <tr>
-                                <td style="padding-bottom: 10px; color:#5A585E; font-weight: 100; text-decoration:none; font-size:40px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, Open sans, Arial, sans-serif; line-height:42px">Welcome to TinyMerch</td>
+                                <td style="padding-bottom: 10px; color:#5A585E; font-weight: 100; text-decoration:none; font-size:40px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, Open sans, Arial, sans-serif; line-height:42px">Welcome to TinyMerch!</td>
                               </tr>
                               <tr>
                                 <td style="padding-top: 25px; color: #5A585E; font-weight: 200; text-decoration:none; font-size:16px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, sans-serif; line-height:28px">First off, thanks so much for your interest in TinyMerch!  Our success is dependent on growing an energetic and  creative community. We’re excited to share some more  designs and details of our product with you. Hopefully  this will get you excited and thinking about how you or  your company could potentially use TinyMerch.</td>
@@ -194,8 +152,8 @@
                               <tr>
                                 <td align="left" height="20" width="50%">
                                   <a href="http://tinymerch.com">
-                                    <img src="https://static.tinymerch.com/emails/welcome/store.png"
-                                    border="0" alt="" title="TinyMerch Store Example" width="600" height="auto" style="display: block; padding: 25px 0px;">
+                                    <img class ="img-style" src="./store.png"
+                                    border="0" alt="" title="TinyMerch Store Example" height="auto" style="display: block; padding: 25px 0px;">
                                   </a>
                                 </td>
                               </tr>
@@ -208,8 +166,8 @@
                               <tr>
                                 <td align="left" height="20" width="50%">
                                   <a href="http://tinymerch.com">
-                                    <img src="https://static.tinymerch.com/emails/welcome/designer.png"
-                                    border="0" alt="" title="TinyMerch Designer Example" width="600" height="auto" style="display: block; padding: 25px 0px;">
+                                    <img class ="img-style" src="./designer.png"
+                                    border="0" alt="" title="TinyMerch Designer Example" height="auto" style="display: block; padding: 25px 0px;">
                                   </a>
                                 </td>
                               </tr>
@@ -231,11 +189,11 @@
                   </tr>
                 </table>
                 <!-- BLOCK - Footer -->
-                <table class="container" align="center" width="600" border="0" cellpadding="0"
+                <table class="container" align="center" border="0" cellpadding="0"
                 cellspacing="0" align="center">
                   <tr>
                     <td style="padding-top: 20px; padding-bottom: 30px; padding-right: 20px; padding-left: 20px;">
-                      <table width="100%" border="0" cellpadding="0" cellspacing="0" style="max-width: 560px;">
+                      <table class="footer" border="0" cellpadding="0" cellspacing="0">
                         <tr>
                           <td style="padding-top: 10px; text-align: center; color: #5A585E; font-weight: 200; text-decoration:none; font-size:14px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, sans-serif; line-height:16px">Some legal stuff we gotta put down here.  And, I mean, if you really wanna unscribe I suppose you can
                             <a href="#"
