Adding sale email

--- a/emails/sale/sale.html
+++ b/emails/sale/sale.html
@@ -178,10 +178,13 @@
                           <td style="padding-bottom: 30px; padding-right: 30px; padding-left: 30px;">
                             <table width="100%" border="0" cellpadding="0" cellspacing="0">
                               <tr>
-                                <td style="padding-top: 10px; color: #5A585E; font-weight: 200; text-decoration:none; font-size:22px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, sans-serif; line-height:28px">👋 {FirstName},</td>
+                                <td style="padding-top: 10px; color: #5A585E; font-weight: 200; text-decoration:none; font-size:22px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, sans-serif; line-height:28px">👋 {StoreName},</td>
                               </tr>
                               <tr>
-                                <td style="padding-top: 10px; padding-bottom: 10px; color:#5A585E; font-weight: 100; text-decoration:none; font-size:40px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, Open sans, Arial, sans-serif; line-height:42px">Your order from {StoreName} is being processed.</td>
+                                <td style="padding-top: 10px; padding-bottom: 10px; color:#5A585E; font-weight: 100; text-decoration:none; font-size:40px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, Open sans, Arial, sans-serif; line-height:42px">Your store just received a new order.</td>
+                              </tr>
+                              <tr>
+                                <td style="padding-top: 10px; padding-bottom: 10px; color:#5A585E; font-weight: 300; text-decoration:none; font-size:16px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, Open sans, Arial, sans-serif; line-height:28px">We're handling fulfillment and shipping, and profits should already be added to your <a href="https://my.tinymerch.com/payment">Stripe account</a>. (Profits are sent to your bank account or debit card monthly.)</td>
                               </tr>
                               {Receipt}
                             </table>
