--- a/emails/welcome/welcome.html
+++ b/emails/welcome/welcome.html
@@ -101,7 +101,7 @@
       <tr>
         <td>
           <td class="bg-png">
-            <img class="bg-png" src="./bg.png" />
+            <img class="bg-png" src="https://static.tinymerch.com/emails/welcome/bg.png" />
           </td>
           <div style="max-height:0; width:0; overflow:hidden; float:left; display:none;"></div>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#F2F2F7">
@@ -122,7 +122,7 @@
                                     <tr>
                                       <td align="left" height="20" width="50%">
                                         <a href="http://tinymerch.com">
-                                          <img src="./logomark-white.png"
+                                          <img src="https://static.tinymerch.com/emails/welcome/logomark-white.png"
                                           border="0" alt="" title="TinyMerch Logo" width="80" height="auto" style="display: block; position: absolute; top: -40px;">
                                         </a>
                                       </td>
@@ -152,7 +152,7 @@
                               <tr>
                                 <td align="left" height="20" width="50%">
                                   <a href="http://tinymerch.com">
-                                    <img class ="img-style" src="./store.png"
+                                    <img class ="img-style" src="https://static.tinymerch.com/emails/welcome/store.png"
                                     border="0" alt="" title="TinyMerch Store Example" height="auto" style="display: block; padding: 25px 0px;">
                                   </a>
                                 </td>
@@ -166,7 +166,7 @@
                               <tr>
                                 <td align="left" height="20" width="50%">
                                   <a href="http://tinymerch.com">
-                                    <img class ="img-style" src="./designer.png"
+                                    <img class ="img-style" src="https://static.tinymerch.com/emails/welcome/designer.png"
                                     border="0" alt="" title="TinyMerch Designer Example" height="auto" style="display: block; padding: 25px 0px;">
                                   </a>
                                 </td>
