--- a/emails/ship/ship.html
+++ b/emails/ship/ship.html
@@ -138,7 +138,7 @@
       <tr> <!-- ROW 01 -->
         <td> <!-- CELL 01 -->
           <td class="bg-png"> <!-- CELL 02 -->
-            <img class="bg-png" src="https://static.tinymerch.com/emails/sale/bg.png" />
+            <img class="bg-png" src="https://static.tinymerch.com/emails/ship/bg.png" />
           </td>
           <div style="max-height:0; width:0; overflow:hidden; float:left; display:none;"></div>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#F2F2F7">
@@ -159,7 +159,7 @@
                                     <tr>
                                       <td align="left" height="20" width="50%">
                                         <a href="http://tinymerch.com">
-                                          <img src="https://static.tinymerch.com/emails/sale/logomark-white.png"
+                                          <img src="https://static.tinymerch.com/emails/ship/logomark-white.png"
                                           border="0" alt="" title="TinyMerch Logo" width="80" height="auto" style="display: block; position: absolute; top: -40px;">
                                         </a>
                                       </td>
@@ -178,13 +178,16 @@
                           <td style="padding-bottom: 30px; padding-right: 30px; padding-left: 30px;">
                             <table width="100%" border="0" cellpadding="0" cellspacing="0">
                               <tr>
-                                <td style="padding-top: 10px; color: #5A585E; font-weight: 200; text-decoration:none; font-size:22px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, sans-serif; line-height:28px">👋 {StoreName},</td>
+                                <td style="padding-top: 10px; color: #5A585E; font-weight: 200; text-decoration:none; font-size:22px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, sans-serif; line-height:28px">👋 {FirstName},</td>
                               </tr>
                               <tr>
-                                <td style="padding-top: 10px; padding-bottom: 10px; color:#5A585E; font-weight: 100; text-decoration:none; font-size:40px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, Open sans, Arial, sans-serif; line-height:42px">Your store just received a new order.</td>
+                                <td style="padding-top: 10px; padding-bottom: 10px; color:#5A585E; font-weight: 100; text-decoration:none; font-size:40px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, Open sans, Arial, sans-serif; line-height:42px">Your order from {StoreName} has shipped.</td>
                               </tr>
                               <tr>
-                                <td style="padding-top: 10px; padding-bottom: 10px; color:#5A585E; font-weight: 300; text-decoration:none; font-size:16px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, Open sans, Arial, sans-serif; line-height:28px">We're handling fulfillment and shipping, and profits should already be added to your <a href="https://my.tinymerch.com/payment">Stripe account</a>. (Profits are sent to your bank account or debit card monthly.)</td>
+                                <td style="padding-top: 10px; padding-bottom: 10px; color:#5A585E; font-weight: 300; text-decoration:none; font-size:16px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, Open sans, Arial, sans-serif; line-height:28px">You can track your shipment's status here:</td>
+                              </tr>
+                              <tr>
+                                <td style="padding-top: 10px; padding-bottom: 10px; color:#5A585E; font-weight: 300; text-decoration:none; font-size:16px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, Open sans, Arial, sans-serif; line-height:28px"><a href="{TrackingUrl}">{TrackingUrl}</a></td>
                               </tr>
                               {Receipt}
                             </table>
