Removing pos-abs stuff

--- a/emails/purchase/purchase.html
+++ b/emails/purchase/purchase.html
@@ -137,15 +137,16 @@
     <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#F2F2F7">
       <tr> <!-- ROW 01 -->
         <td> <!-- CELL 01 -->
-          <td class="bg-png"> <!-- CELL 02 -->
+          <!--
+          <td class="bg-png">
             <img class="bg-png" src="https://static.tinymerch.com/emails/purchase/bg.png" />
           </td>
+          -->
           <div style="max-height:0; width:0; overflow:hidden; float:left; display:none;"></div>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#F2F2F7">
             <tr> <!-- ROW 02 -->
               <td class="mobile-no-padding" style="padding-top: 100px; padding-right: 25px; padding-left: 25px;">
-                <table class="container" style="position: relative; z-index: 2;" align="center" border="0" cellspacing="0"
-                cellpadding="0">
+                <table class="container" style="position: relative; z-index: 2;" align="center" border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     <td class="mobile-no-radius" style="background-color:#ffffff; border-radius: 8px; box-shadow: 0px 4px 8px rgba(90,88,94,.3);">
                       <!-- HEADER-->
@@ -195,16 +196,18 @@
                       </table>
                       <!-- end BLOCK - 1 column / main -->
                     </td>
+                  </tr>
                 </table>
                 <!-- BLOCK - Footer -->
                 <table class="container" align="center" border="0" cellpadding="0" cellspacing="0" align="center">
                   <tr>
                     <td style="padding-top: 20px; padding-bottom: 30px; padding-right: 20px; padding-left: 20px;">
                       <table class="footer" border="0" cellpadding="0" cellspacing="0">
+                      <tr>
                         <td style="padding-top: 10px; padding-bottom: 30px; text-align: center; color: #5A585E; font-weight: 200; text-decoration:none; font-size:14px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, sans-serif; line-height:16px">
                           &#169; 2017 TinyMerch
                         </td>
-
+                      </tr>
                       </table>
                     </td>
                   </tr>
