--- a/emails/ship/ship.html
+++ b/emails/ship/ship.html
@@ -137,9 +137,11 @@
     <table align="center" width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#F2F2F7">
       <tr> <!-- ROW 01 -->
         <td> <!-- CELL 01 -->
-          <td class="bg-png"> <!-- CELL 02 -->
+          <!--
+          <td class="bg-png">
             <img class="bg-png" src="https://static.tinymerch.com/emails/ship/bg.png" />
           </td>
+        -->
           <div style="max-height:0; width:0; overflow:hidden; float:left; display:none;"></div>
           <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#F2F2F7">
             <tr> <!-- ROW 02 -->
