Adding order numbers

--- a/emails/sale/sale.html
+++ b/emails/sale/sale.html
@@ -194,6 +194,11 @@
                         </tr>
                         <tr>
                           <td style="padding-top: 10px; padding-bottom: 30px; text-align: center; color: #5A585E; font-weight: 200; text-decoration:none; font-size:14px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, sans-serif; line-height:16px">
+                            Order number: {OrderNumber}
+                          </td>
+                        </tr>
+                        <tr>
+                          <td style="padding-top: 10px; padding-bottom: 30px; text-align: center; color: #5A585E; font-weight: 200; text-decoration:none; font-size:14px; font-family: 'Karla', 'Roboto Light', Roboto, Helvetica Neue, Helvetica, sans-serif; line-height:16px">
                             Need help? Contact us at team@tinymerch.com.
                           </td>
                         </tr>
